--- a/css/footer.css
+++ b/css/footer.css
@@ -1,95 +1,86 @@
-
-
-.about-Us {
-    background: rgba(121, 131, 130, 0.576);
-    width: 100%;
-    position: absolute;
-    height: 45vh;
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: column;
-    align-items: center;
-}
-
-.about-Us a{
-    text-decoration: none;
-    color: darkslategrey;
-    border-radius: 50%;
+.footer-sec{
+    color: #111111;
+    background-color: #f2f2f2;
     text-align: center;
+    
 }
 
-.about-Us a:hover{
-        color: #8a135e;
-}
-
-
-.social-media{
+.footer{
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 168px;
+    max-width: 1140px;
+    align-items: center;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    flex-wrap: wrap;
+}
+
+.footer-container{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    flex-wrap: wrap;
+
+}
+
+.footer-text, .handles{
+    width: 50%;
+    min-height: 108px;
 }
 
 .bi{
-    font-size: 40px;
+    color: white;
+    border-radius: 50%;
+    font-size: 25px;
 }
 
-.footer-links{
+.footer-text{
     display: flex;
-    justify-content: space-between;
+    align-items: center;
 }
 
-.footer-links a:hover{
-    text-decoration: underline;
-}
-
-.copyright{
-    position: relative;
-    top: 4%;
-    height: 25px;
-    width: 100%;
-    text-align: center;
-}
-
-.about-Us a .bi-instagram:hover{
-    color: #ca0e85;
-}
-
-.about-Us a .bi-facebook:hover{
-    color: #0e5ddc;
-}
-
-.about-Us a .bi-youtube:hover{
-    color: #b00000;
-}
-
-.about-Us a .bi-twitter:hover{
-    color: #00ccdb;
-}
-
-.handles{
-    width: 80%;
+.follow-us-header{
+    font-size: 2.25rem;
 }
 
 @media (max-width:750px){
 
-    .footer-links{
-        width: 80%;
-        flex-direction: column;
-        
+    .footer-text, .handles{
+        width: 100%;
+        min-height: 150px;
     }
 
     .handles{
-        width: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
+    
+    .bi{
+        padding: 8px;
+    }
+
+    
 
 
 }
 @media (min-width:751px){
-    .footer-links{
-        width: 30%;
-        flex-direction: row;
+    .footer-text, .handles{
+        width: 50%;
+        min-height: 108px;
     }
 
-    .handles{
-        width: 30%;
+    .follow-us, .social-icons{
+        padding: 29px 60px;
+    }
+
+    .bi{
+        padding: 10px;
     }
 }
+
+
