--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,11 @@ html, body{
         text-align: end;
     }
 
+    .committees-heading{
+        font-size: 30px;
+        margin: 10px;;
+    }
+
 }
 @media (min-width:751px){
     
@@ -33,6 +38,11 @@ html, body{
         text-align: center;
     }
 
+
+    .committees-heading{
+        font-size: 50px;
+        margin: 30px 10px 20px 80px;
+    }
 }
 
 
@@ -93,6 +103,10 @@ html, body{
     transition: 0.2s;
 }
 
+.head-layout{
+    text-transform: uppercase;
+    color: rgb(0, 90, 139);
+}
 
 .card-section{
     transform-style: preserve-3d;
@@ -134,7 +148,7 @@ html, body{
     position: absolute;
     width: 100%;
     height: 100%;
-    padding: 20px;
+    padding: 50px;
     background-color: black;
     border-radius: 4px
 }
@@ -194,7 +208,7 @@ html, body{
 .container .box .card-body .content div{
     transform-style: preserve-3d;
     padding: 20px;
-    background: linear-gradient(45deg, #FE0061,#FFEB3B);
+    background: linear-gradient(45deg, #0654a6,#02ccc6);
     transform: translateZ(100px);
     border-radius: 5px
 }
@@ -207,3 +221,6 @@ html, body{
     font-size: 10px;
 }
 
+section{
+    margin: 20px 0 20px 0;
+}
