--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,15 @@ html, body{
         margin: 10px;;
     }
 
+    .container .box{
+        width: 200px;
+        height: 200px;
+    }
+
+    .container .box .card-body .content div{
+        padding: 10px;
+    }
+
 }
 @media (min-width:751px){
     
@@ -42,6 +51,15 @@ html, body{
     .committees-heading{
         font-size: 50px;
         margin: 30px 10px 20px 80px;
+    }
+
+    .container .box{
+        width: 300px;
+        height: 300px;
+    }
+
+    .container .box .card-body .content div{
+        padding: 20px;
     }
 }
 
@@ -118,8 +136,6 @@ html, body{
 
 .container .box{
     position: relative;
-    width: 300px;
-    height: 300px;
     margin: 20px;
     transform-style: preserve-3d;
     perspective: 1000px;
@@ -207,7 +223,6 @@ html, body{
 
 .container .box .card-body .content div{
     transform-style: preserve-3d;
-    padding: 20px;
     background: linear-gradient(45deg, #0654a6,#02ccc6);
     transform: translateZ(100px);
     border-radius: 5px
