--- a/css/committees.css
+++ b/css/committees.css
@@ -311,3 +311,20 @@ body {
     }
     
 }
+
+.text-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#specpol .committees .container .text-container .text-box{
+    padding: 10px;
+}
+
+#specpol .committees .container .text-container{
+    width: 410px;
+    max-height: 460px;
+    margin: 40px 50px 0;
+}
